[tool.poetry]
name = "sitmun-github-io"
version = "0.1.0"
description = "Documentación de SITMUN 3"
authors = ["Equipo de coordinación técnica"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
certifi = "2023.7.22"
charset-normalizer = "3.1.0"
click = "8.1.3"
colorama = "0.4.6"
ghp-import = "2.1.0"
idna = "3.4"
jinja2 = "3.1.2"
markdown = "3.3.7"
markupsafe = "2.1.3"
mergedeep = "1.3.4"
mkdocs = "1.5.2"
mkdocs-material = "9.2.1"
mkdocs-material-extensions = "1.1.1"
mkdocs-print-site-plugin = "2.3.5"
mkdocs-render-swagger-plugin = "0.1.1"
mkdocs-autorefs = "0.5.0"
packaging = "23.1"
pygments = "2.15.1"
pymdown-extensions = "10.0.1"
python-dateutil = "2.8.2"
pyyaml = "6.0"
pyyaml-env-tag = "0.1"
regex = "2023.6.3"
requests = "2.31.0"
six = "1.16.0"
urllib3 = "2.0.3"
watchdog = "3.0.0"
plantuml-markdown = "3.9.1"
markdown-grid-tables = "0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
